--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="loader-container">
-        <div class="loader"></div>
-      </div>
+      <div class="loader"></div>
+    </div>
     <header>
       <div class="logo">
         <img src="assets/images/logo/ohmyfood@2x.svg" alt="ohmyfood" />
@@ -38,8 +38,8 @@
           <p class="L2">
             Découvrez des restaurants d’exception, sélectionnés par nos soins.
           </p>
-          <button class="btn-menu">
-            <a href="#"><span>Explorer nos restaurants</span></a>
+          <button class="btn-menu" onclick="location.href='#';">
+            <span>Explorer nos restaurants</span>
           </button>
         </section>
       </div>
@@ -60,15 +60,6 @@
                     <path
                       d="M16 64C16 28.7 44.7 0 80 0L304 0c35.3 0 64 28.7 64 64l0 384c0 35.3-28.7 64-64 64L80 512c-35.3 0-64-28.7-64-64L16 64zM224 448a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM304 64L80 64l0 320 224 0 0-320z"
                     />
-                    <defs>
-                      <linearGradient
-                        id="FillGradient"
-                        gradientTransform="rotate(90)"
-                      >
-                        <stop offset="2%" stop-color="#9356DC" />
-                        <stop offset="98%" stop-color="#FF79DA" />
-                      </linearGradient>
-                    </defs>
                   </svg>
                 </div>
                 <p>Choisissez un restaurant</p>
@@ -87,15 +78,6 @@
                     <path
                       d="M64 144a48 48 0 1 0 0-96 48 48 0 1 0 0 96zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L192 64zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zM64 464a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm48-208a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"
                     />
-                    <defs>
-                      <linearGradient
-                        id="FillGradient"
-                        gradientTransform="rotate(90)"
-                      >
-                        <stop offset="2%" stop-color="#9356DC" />
-                        <stop offset="98%" stop-color="#FF79DA" />
-                      </linearGradient>
-                    </defs>
                   </svg>
                 </div>
                 <p>Composez votre menu</p>
@@ -153,21 +135,7 @@
                     class="heart-checkbox"
                   />
                   <label for="heartCheckbox1" class="icon">
-                    <svg
-                      class="heart-main"
-                      viewBox="0 0 512 512"
-                      width="50"
-                      title="heart"
-                    >
-                      <defs>
-                        <linearGradient
-                          id="FillGradient"
-                          gradientTransform="rotate(90)"
-                        >
-                          <stop offset="2%" stop-color="#9356DC" />
-                          <stop offset="98%" stop-color="#FF79DA" />
-                        </linearGradient>
-                      </defs>
+                    <svg class="heart-main" viewBox="0 0 512 512" width="50">
                       <path
                         d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                       />
@@ -194,21 +162,7 @@
                     class="heart-checkbox"
                   />
                   <label for="heartCheckbox2" class="icon">
-                    <svg
-                      class="heart-main"
-                      viewBox="0 0 512 512"
-                      width="50"
-                      title="heart"
-                    >
-                      <defs>
-                        <linearGradient
-                          id="FillGradient"
-                          gradientTransform="rotate(90)"
-                        >
-                          <stop offset="2%" stop-color="#9356DC" />
-                          <stop offset="98%" stop-color="#FF79DA" />
-                        </linearGradient>
-                      </defs>
+                    <svg class="heart-main" viewBox="0 0 512 512" width="50">
                       <path
                         d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                       />
@@ -234,21 +188,7 @@
                     class="heart-checkbox"
                   />
                   <label for="heartCheckbox3" class="icon">
-                    <svg
-                      class="heart-main"
-                      viewBox="0 0 512 512"
-                      width="50"
-                      title="heart"
-                    >
-                      <defs>
-                        <linearGradient
-                          id="FillGradient"
-                          gradientTransform="rotate(90)"
-                        >
-                          <stop offset="2%" stop-color="#9356DC" />
-                          <stop offset="98%" stop-color="#FF79DA" />
-                        </linearGradient>
-                      </defs>
+                    <svg class="heart-main" viewBox="0 0 512 512" width="50">
                       <path
                         d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                       />
@@ -274,21 +214,7 @@
                     class="heart-checkbox"
                   />
                   <label for="heartCheckbox4" class="icon">
-                    <svg
-                      class="heart-main"
-                      viewBox="0 0 512 512"
-                      width="50"
-                      title="heart"
-                    >
-                      <defs>
-                        <linearGradient
-                          id="FillGradient"
-                          gradientTransform="rotate(90)"
-                        >
-                          <stop offset="2%" stop-color="#9356DC" />
-                          <stop offset="98%" stop-color="#FF79DA" />
-                        </linearGradient>
-                      </defs>
+                    <svg class="heart-main" viewBox="0 0 512 512" width="50">
                       <path
                         d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                       />
@@ -297,25 +223,26 @@
                 </div>
               </div>
             </a>
-          </section>
           </div>
-          </main>
-          <footer>
-            <div class="titre-footer">
-              <p class="footer-logo">ohmyfood</p>
-            </div>
-            <div class="footer-section">
-              <div>
-                <i class="fa-solid fa-utensils"></i>
-                <p>Proposer un restaurant</p>
-              </div>
-              <div>
-                <i class="fa-solid fa-handshake-angle"></i>
-                <p>Devenir partenaire</p>
-              </div>
-              <p>Mentions légales</p>
-              <p><a href="mailto:adresse@example.com">Contact</a></p>
-            </div>
-        </footer>
-    </body>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="titre-footer">
+        <p class="footer-logo">ohmyfood</p>
+      </div>
+      <div class="footer-section">
+        <div>
+          <i class="fa-solid fa-utensils"></i>
+          <p>Proposer un restaurant</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-handshake-angle"></i>
+          <p>Devenir partenaire</p>
+        </div>
+        <p>Mentions légales</p>
+        <p><a href="mailto:adresse@example.com">Contact</a></p>
+      </div>
+    </footer>
+  </body>
 </html>
