--- a/restaurants/La_palette_du_gout.html
+++ b/restaurants/La_palette_du_gout.html
@@ -37,12 +37,7 @@
           <h2>La palette du goût</h2>
           <input type="checkbox" id="heartCheckbox4" class="heart-checkbox" />
           <label for="heartCheckbox4" class="icon">
-            <svg
-              class="heart-main"
-              viewBox="0 0 512 512"
-              width="50"
-              title="heart"
-            >
+            <svg class="heart-main" viewBox="0 0 512 512" width="50">
               <defs>
                 <linearGradient
                   id="FillGradient"
@@ -155,8 +150,8 @@
             </div>
           </div>
         </div>
-        <button class="btn-menu">
-          <a href="#"><span>Commander</span></a>
+        <button class="btn-menu" onclick="location.href='#';">
+          <span>Commander</span>
         </button>
       </section>
     </main>
