--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
         <section class="restaurant">
           <h1>Restaurants</h1>
           <div class="restaurants-card">
-            <a class="link" href="restaurants/La_palette_du_gout.html">
+            <div class="link">
               <div class="restaurant-card">
-                <img
-                  src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="La palette du goût"
-                />
+                <a href="restaurants/La_palette_du_gout.html">
+                  <img
+                    src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="La palette du goût"
+                  />
+                </a>
                 <div class="nouveau">Nouveau</div>
                 <div class="container-card">
                   <div class="desc">
@@ -143,13 +145,15 @@
                   </label>
                 </div>
               </div>
-            </a>
-            <a class="link" href="restaurants/La_note_enchantee.html">
+            </div>
+            <div class="link">
               <div class="restaurant-card">
-                <img
-                  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                  alt="La note enchantée"
-                />
+                <a href="restaurants/La_note_enchantee.html">
+                  <img
+                    src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt="La note enchantée"
+                  />
+                </a>
                 <div class="nouveau">Nouveau</div>
                 <div class="container-card">
                   <div class="desc">
@@ -170,13 +174,15 @@
                   </label>
                 </div>
               </div>
-            </a>
-            <a class="link" href="restaurants/a_la_francaise.html">
+            </div>
+            <div class="link">
               <div class="restaurant-card">
-                <img
-                  src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                  alt="À la française"
-                />
+                <a href="restaurants/a_la_francaise.html">
+                  <img
+                    src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="À la française"
+                  />
+                </a>
                 <div class="container-card">
                   <div class="desc">
                     <p class="nom-resto">À la française</p>
@@ -196,13 +202,15 @@
                   </label>
                 </div>
               </div>
-            </a>
-            <a class="link" href="restaurants/Le_delice_des_sens.html">
+            </div>
+            <div class="link">
               <div class="restaurant-card">
-                <img
-                  src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="Le délice des sens"
-                />
+                <a href="restaurants/Le_delice_des_sens.html">
+                  <img
+                    src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="Le délice des sens"
+                  />
+                </a>
                 <div class="container-card">
                   <div class="desc">
                     <p class="nom-resto">Le délice des sens</p>
@@ -222,7 +230,7 @@
                   </label>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
         </section>
       </div>
